--- a/bootstrap/urunlistesi.html
+++ b/bootstrap/urunlistesi.html
@@ -53,7 +53,9 @@
                                 <div class="card" style="width: 15rem;">
                                     <img src="https://picsum.photos/200/200" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">BAŞLIK</h5>
+                                        <h5 class="card-title">MARKA: ${urun.marka}</h5>
+                                        <h5 class="card-title">MODEL: ${urun.model}</h5>
+                                        
                                         <p class="card-text">${urun.ad}</p>
                                     </div>
                                     <ul class="list-group list-group-flush">
