--- a/odev/java14eticaret.html
+++ b/odev/java14eticaret.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="java14eticaret.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
   <body>
     <!-- BAŞLIK VE MENU ALANLARI -->
@@ -111,25 +112,150 @@
                         </div>
                       </nav>
                 </div>
-                <div class="col-3"></div>
+                <div class="col-3">
+                    <div class="row justify-content-end align-items-center">
+                        <div class="col-xl-1 col-md-2 col-sm-3">
+                            <i class="fa-regular fa-bell"></i>
+                        </div>
+                        <div class="col-xl-1 col-md-2 col-sm-3 bottom-border">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </div>
+                        <div class="col-xl-1 col-md-2 col-sm-3">
+                            <i class="fa-solid fa-circle-user"></i>
+                        </div>
+                        <div class="col-4">
+                            <span class="text-span">Merhaba</span>
+                            <label class="text-label">Muhammet HOCA</label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
     <!-- SECTION INDIRIM -->
-    <section>
-
+    <section class="section-offer">
+        <div class="row project-padding">
+            <div class="col-9 banner-padding">
+                <div class="banner-left">
+                    <div class="banner-left-header">
+                        <h6>
+                            Muhteşem indirim
+                            <span class="span-box">%50 + %50 indirim</span>
+                        </h6>
+                        <h1 class="offer-header">
+                           TÜM OTURMA GRUPLARINDA KAMPANYA 
+                        </h1>
+                        <button class="shop-now">Satın Al</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 banner-padding">
+                <div class="banner-right">                    
+                    <h1 class="offer-header">
+                       KOLTUK GÜNÜ BAŞLASIN 
+                    </h1>
+                    <button class="shop-now">Satın Al</button>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- SECTION HİZMETLER-->
-    <section>
-
+    <section class="section-service">
+        <div class="row project-padding mt-3">
+            <div class="col">
+                <div class="service-container">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <div class="col-10">
+                            <label class="service-h3">Ücretsiz kargo</label>
+                            <label class="service-h6">tüm Türkiye ye gönderi yapılır </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="service-container">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <div class="col-10">
+                            <label class="service-h3">Ücretsiz kargo</label>
+                            <label class="service-h6">tüm Türkiye ye gönderi yapılır </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="service-container">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <div class="col-10">
+                            <label class="service-h3">Ücretsiz kargo</label>
+                            <label class="service-h6">tüm Türkiye ye gönderi yapılır </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="service-container">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <div class="col-10">
+                            <label class="service-h3">Ücretsiz kargo</label>
+                            <label class="service-h6">tüm Türkiye ye gönderi yapılır </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="service-container">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <div class="col-10">
+                            <label class="service-h3">Ücretsiz kargo</label>
+                            <label class="service-h6">tüm Türkiye ye gönderi yapılır </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- SECTION BILDIRIM -->
-    <section>
+    <section class="section-note">
 
     </section>
     <!-- SECTION URUNLER-->
-     <section>
+     <section class="section-products">
+        <div class="row project-padding mt-5">
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="product"></div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product"></div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product"></div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
 
+            </div>
+        </div>
      </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
